2007-03-28  Stefan Kost  <ensonic@users.sf.net>

	* docs/design/draft-klass.txt:
	  Add example that needs more thinking.
	
	* docs/design/draft-missing-plugins.txt:
	  More thoughts about wtrapper plugins.
	
	* docs/random/ensonic/embedded.txt:
	* docs/random/ensonic/profiling.txt:
	  More design work.

2007-03-25  Wim Taymans  <wim@fluendo.com>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_get_range),
	(gst_base_src_loop):
	Only push the segment events in the PLAYING state for live sources.

2007-03-23  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/gstpipeline.c: (gst_pipeline_change_state):
	Modify the clock distribution path in PAUSED->PLAYING so that we 
	never attempt to choose a new clock unless we're actually leaving
	the PAUSED state for the first time. This prevents choosing a
	different clock when the state_change gets called for a 2nd time due
	to some element doing an async state change.

2007-03-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstpad.c: (gst_pad_set_caps), (gst_pad_configure_sink),
	(gst_pad_configure_src), (gst_pad_alloc_buffer_full),
	(gst_pad_chain_unchecked), (gst_pad_push):
	Revert last commit. This needs some more thoughts.

2007-03-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstpad.c: (gst_pad_set_caps), (gst_pad_alloc_buffer_full),
	(gst_pad_chain_unchecked), (gst_pad_push):
	Check in set_caps if the caps are compatible with the pad and remove
	two functions that are redundant now. Fixes #421543.

2007-03-22  Wim Taymans  <wim@fluendo.com>

	* tests/check/gst/gstsystemclock.c: (GST_START_TEST),
	(mixed_thread), (mixed_async_cb), (gst_systemclock_suite):
	Unref some more to make valgrind happy.

2007-03-22  Wim Taymans  <wim@fluendo.com>

	* gst/gstsystemclock.c: (gst_system_clock_id_wait_jitter_unlocked),
	(gst_system_clock_id_wait_jitter),
	(gst_system_clock_id_wait_async), (gst_system_clock_id_unschedule):
	Fix anoying regression that survived a few releases. When adding an